--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Show Image"/>
+    <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="text View"
+              android:textTyle="bold"
 </LinearLayout>
