--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,8 @@
         android:src="@android:mipmap/sym_def_app_icon"
         android:layout_width="@dimen/size200dp"
         android:layout_height="@dimen/size200dp" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show Image"/>
 </LinearLayout>
